--- a/assets/jammyfurniture/lang/ja_JP.lang
+++ b/assets/jammyfurniture/lang/ja_JP.lang
@@ -1,12 +1,12 @@
 // Jammy Furniture Mod
 
 // アイテム名
-item.ceramicPanelUnf.name=セラミック板(生)
+item.ceramicPanelUnf.name=生のセラミック板
 item.itemBlindPart.name=ブラインドのパーツ
 item.itemCeramicPanel.name=セラミック板
 item.itemLightBulb.name=電球
 item.itemWMDrum.name=洗濯機のドラム
-item.mantlePieceUnf.name=暖炉の枠(生)
+item.mantlePieceUnf.name=生の暖炉の枠
 
 // ブロック名
 tile.MobHeadsFour.BlazeHead.name=ブレイズの頭
@@ -25,10 +25,10 @@ tile.MobHeadsTwo.PigHead.name=ブタの頭
 tile.MobHeadsTwo.SheepHead.name=ヒツジの頭
 tile.MobHeadsTwo.SkeletonHead.name=スケルトンの頭
 tile.MobHeadsTwo.SpiderHead.name=クモの頭
-tile.armChair.ArmChairBlue.name=肘掛け椅子(青)
-tile.armChair.ArmChairGreen.name=肘掛け椅子(緑)
-tile.armChair.ArmChairGrey.name=肘掛け椅子(グレー)
-tile.armChair.ArmChairRed.name=肘掛け椅子(赤)
+tile.armChair.ArmChairBlue.name=肘掛け椅子(青色)
+tile.armChair.ArmChairGreen.name=肘掛け椅子(緑色)
+tile.armChair.ArmChairGrey.name=肘掛け椅子(灰色)
+tile.armChair.ArmChairRed.name=肘掛け椅子(赤色)
 tile.bathBlock.name=浴槽
 tile.ceramicBlockOne.BathroomCupboard.name=浴室棚
 tile.ceramicBlockOne.BathroomSink.name=洗面器
@@ -54,22 +54,22 @@ tile.roofingBlocksOne.RoofingCenter.name=屋根(とんがり)
 tile.roofingBlocksOne.RoofingCorner.name=屋根(凹み)
 tile.roofingBlocksOne.RoofingInverted.name=屋根(立方体)
 tile.roofingBlocksOne.RoofingNormal.name=屋根(斜め)
-tile.sofaCenter.SofaCenterBlue.name=ソファー(中央)(青)
-tile.sofaCenter.SofaCenterGreen.name=ソファー(中央)(緑)
-tile.sofaCenter.SofaCenterGrey.name=ソファー(中央)(グレー)
-tile.sofaCenter.SofaCenterRed.name=ソファー(中央)(赤)
-tile.sofaCorner.SofaCornerBlue.name=ソファー(角)(青)
-tile.sofaCorner.SofaCornerGreen.name=ソファー(角)(緑)
-tile.sofaCorner.SofaCornerGrey.name=ソファー(角)(グレー)
-tile.sofaCorner.SofaCornerRed.name=ソファー(角)(赤)
-tile.sofaLeft.SofaLeftBlue.name=ソファー(左)(青)
-tile.sofaLeft.SofaLeftGreen.name=ソファー(左)(緑)
-tile.sofaLeft.SofaLeftGrey.name=ソファー(左)(グレー)
-tile.sofaLeft.SofaLeftRed.name=ソファー(左)(赤)
-tile.sofaRight.SofaRightBlue.name=ソファー(右)(青)
-tile.sofaRight.SofaRightGreen.name=ソファー(右)(緑)
-tile.sofaRight.SofaRightGrey.name=ソファー(右)(グレー)
-tile.sofaRight.SofaRightRed.name=ソファー(右)(赤)
+tile.sofaCenter.SofaCenterBlue.name=ソファー(中央)(青色)
+tile.sofaCenter.SofaCenterGreen.name=ソファー(中央)(緑色)
+tile.sofaCenter.SofaCenterGrey.name=ソファー(中央)(灰色)
+tile.sofaCenter.SofaCenterRed.name=ソファー(中央)(赤色)
+tile.sofaCorner.SofaCornerBlue.name=ソファー(角)(青色)
+tile.sofaCorner.SofaCornerGreen.name=ソファー(角)(緑色)
+tile.sofaCorner.SofaCornerGrey.name=ソファー(角)(灰色)
+tile.sofaCorner.SofaCornerRed.name=ソファー(角)(赤色)
+tile.sofaLeft.SofaLeftBlue.name=ソファー(左)(青色)
+tile.sofaLeft.SofaLeftGreen.name=ソファー(左)(緑色)
+tile.sofaLeft.SofaLeftGrey.name=ソファー(左)(灰色)
+tile.sofaLeft.SofaLeftRed.name=ソファー(左)(赤色)
+tile.sofaRight.SofaRightBlue.name=ソファー(右)(青色)
+tile.sofaRight.SofaRightGreen.name=ソファー(右)(緑色)
+tile.sofaRight.SofaRightGrey.name=ソファー(右)(灰色)
+tile.sofaRight.SofaRightRed.name=ソファー(右)(赤色)
 tile.woodBlocks.Blinds.name=ブラインド
 tile.woodBlocks.ClockBase.name=置時計(土台)
 tile.woodBlocks.ClockMiddle.name=置時計(柱)
